add header top layout and some styles

--- a/src/style/main.less
+++ b/src/style/main.less
@@ -1,3 +1,6 @@
 @import "./bootstrap.less";
 @import "./variables.less";
 @import "./type.less";
+
+@import "./general.less";
+@import "./grid.less";
