--- a/src/style/bootstrap.less
+++ b/src/style/bootstrap.less
@@ -13,9 +13,7 @@
 
 // Core CSS
 @import "../../bower_components/bootstrap/less/scaffolding.less";
-// @import "type.less";
-// @import "code.less";
-// @import "grid.less";
+@import "../../bower_components/bootstrap/less/grid.less";
 // @import "tables.less";
 // @import "forms.less";
 // @import "buttons.less";
@@ -49,6 +47,6 @@
 // @import "popovers.less";
 // @import "carousel.less";
 //
-// // Utility classes
-// @import "utilities.less";
+// Utility classes
+@import "../../bower_components/bootstrap/less/utilities.less";
 // @import "responsive-utilities.less";
