add basic layout

--- a/src/style/variables.less
+++ b/src/style/variables.less
@@ -357,7 +357,7 @@
 //##
 
 // Basics of a navbar
-@navbar-height:                    50px;
+@navbar-height:                    55px;
 @navbar-margin-bottom:             @line-height-computed;
 @navbar-border-radius:             @border-radius-base;
 @navbar-padding-horizontal:        floor((@grid-gutter-width / 2));
@@ -365,8 +365,8 @@
 @navbar-collapse-max-height:       340px;
 
 @navbar-default-color:             #777;
-@navbar-default-bg:                #f8f8f8;
-@navbar-default-border:            darken(@navbar-default-bg, 6.5%);
+@navbar-default-bg:                transparent;
+@navbar-default-border:            transparent;
 
 // Navbar links
 @navbar-default-link-color:                #777;
