--- a/src/style/bootstrap.less
+++ b/src/style/bootstrap.less
@@ -15,7 +15,7 @@
 @import "../../bower_components/bootstrap/less/scaffolding.less";
 @import "../../bower_components/bootstrap/less/grid.less";
 // @import "tables.less";
-// @import "forms.less";
+// @import "../../bower_components/bootstrap/less/forms.less";
 // @import "buttons.less";
 
 // Components
@@ -23,8 +23,8 @@
 // @import "dropdowns.less";
 // @import "button-groups.less";
 // @import "input-groups.less";
-// @import "navs.less";
-// @import "navbar.less";
+// @import "../../bower_components/bootstrap/less/navs.less";
+// @import "../../bower_components/bootstrap/less/navbar.less";
 // @import "breadcrumbs.less";
 // @import "pagination.less";
 // @import "pager.less";
