--- a/src/style/bootstrap.less
+++ b/src/style/bootstrap.less
@@ -14,6 +14,7 @@
 // Core CSS
 @import "../../bower_components/bootstrap/less/scaffolding.less";
 @import "../../bower_components/bootstrap/less/grid.less";
+@import "../../bower_components/bootstrap/less/type.less";
 // @import "tables.less";
 // @import "../../bower_components/bootstrap/less/forms.less";
 // @import "buttons.less";
