--- a/src/style/grid.less
+++ b/src/style/grid.less
@@ -4,6 +4,5 @@
 
 .content-block {
   background-color: #fff;
-  padding-left: @grid-gutter-width/2;
-  padding-right: @grid-gutter-width/2;
+  padding: 15px @grid-gutter-width;
 }
