--- a/src/style/type.less
+++ b/src/style/type.less
@@ -1,20 +1,3 @@
-//
-// Typography
-// --------------------------------------------------
-@font-face {
-  font-family: 'HelveticaNeueCyr-Light';
-  font-style: normal;
-  font-weight: normal;
-  src: local('HelveticaNeueCyr-Light'), url('../fonts/HelveticaNeueCyr-Light.woff') format('woff');
-}
-
-
-@font-face {
-  font-family: 'HelveticaNeueCyr-Roman';
-  font-style: normal;
-  font-weight: normal;
-  src: local('HelveticaNeueCyr-Roman'), url('../fonts/HelveticaNeueCyr-Roman.woff') format('woff');
-}
 
 // Headings
 // -------------------------
@@ -159,7 +142,7 @@
 
 .page-header {
   margin: 0;
-  margin-bottom: @line-height-computed;
+  margin-bottom: 2*@line-height-computed;
   padding-bottom: 0;
   border-bottom: none;
 }
