--- a/src/style/bootstrap.less
+++ b/src/style/bootstrap.less
@@ -15,39 +15,39 @@
 @import "../../bower_components/bootstrap/less/scaffolding.less";
 @import "../../bower_components/bootstrap/less/grid.less";
 @import "../../bower_components/bootstrap/less/type.less";
-// @import "tables.less";
+// @import "../../bower_components/bootstrap/less/tables.less";
 // @import "../../bower_components/bootstrap/less/forms.less";
-// @import "buttons.less";
+ @import "../../bower_components/bootstrap/less/buttons.less";
 
 // Components
-// @import "component-animations.less";
-// @import "dropdowns.less";
-// @import "button-groups.less";
-// @import "input-groups.less";
+// @import "../../bower_components/bootstrap/less/component-animations.less";
+// @import "../../bower_components/bootstrap/less/dropdowns.less";
+// @import "../../bower_components/bootstrap/less/button-groups.less";
+// @import "../../bower_components/bootstrap/less/input-groups.less";
 // @import "../../bower_components/bootstrap/less/navs.less";
 // @import "../../bower_components/bootstrap/less/navbar.less";
-// @import "breadcrumbs.less";
-// @import "pagination.less";
-// @import "pager.less";
-// @import "labels.less";
-// @import "badges.less";
-// @import "jumbotron.less";
-// @import "thumbnails.less";
-// @import "alerts.less";
-// @import "progress-bars.less";
-// @import "media.less";
-// @import "list-group.less";
-// @import "panels.less";
-// @import "responsive-embed.less";
-// @import "wells.less";
-// @import "close.less";
+// @import "../../bower_components/bootstrap/less/breadcrumbs.less";
+// @import "../../bower_components/bootstrap/less/pagination.less";
+// @import "../../bower_components/bootstrap/less/pager.less";
+// @import "../../bower_components/bootstrap/less/labels.less";
+// @import "../../bower_components/bootstrap/less/badges.less";
+// @import "../../bower_components/bootstrap/less/jumbotron.less";
+// @import "../../bower_components/bootstrap/less/thumbnails.less";
+// @import "../../bower_components/bootstrap/less/alerts.less";
+// @import "../../bower_components/bootstrap/less/progress-bars.less";
+// @import "../../bower_components/bootstrap/less/media.less";
+// @import "../../bower_components/bootstrap/less/list-group.less";
+// @import "../../bower_components/bootstrap/less/panels.less";
+// @import "../../bower_components/bootstrap/less/responsive-embed.less";
+// @import "../../bower_components/bootstrap/less/wells.less";
+// @import "../../bower_components/bootstrap/less/close.less";
 //
 // // Components w/ JavaScript
-// @import "modals.less";
-// @import "tooltip.less";
-// @import "popovers.less";
-// @import "carousel.less";
+ // @import "../../bower_components/bootstrap/less/modals.less";
+// @import "../../bower_components/bootstrap/less/tooltip.less";
+// @import "../../bower_components/bootstrap/less/popovers.less";
+// @import "../../bower_components/bootstrap/less/carousel.less";
 //
 // Utility classes
 @import "../../bower_components/bootstrap/less/utilities.less";
-// @import "responsive-utilities.less";
+// @import "../../bower_components/bootstrap/less/responsive-utilities.less";
