--- a/src/style/general.less
+++ b/src/style/general.less
@@ -1,6 +1,13 @@
+a {
+  text-decoration: underline;
+}
+
+.btn {
+  text-decoration: none;
+}
+
 .page-header {
   background: #ffffff;
-  padding-top: 15px;
 }
 
 .header-top {
@@ -13,6 +20,12 @@
     top: 0;
     left: 0;
   }
+
+  .wrapper {
+    display: flex;
+    justify-content: space-between;
+    align-items: baseline;
+  }
 }
 
 .contacts {
@@ -21,5 +34,60 @@
 
 .contacts-time {
   position: absolute;
+  right: 0;
   bottom: 100%;
+}
+
+.contacts-phone {
+  font-size: 2.1em;
+}
+
+.service-list {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+
+  > li {
+    padding-bottom: 1em;
+
+    > a {
+      font-style: italic;
+      color: @gray-lighter;
+
+      &:hover,
+      &:active,
+      &.active {
+        color: @link-color;
+        cursor: pointer;
+      }
+    }
+  }
+}
+
+.choice {
+  figcaption {
+    text-align: center;
+  }
+
+  .choice-color-list a {
+    position: relative;
+    cursor: pointer;
+
+    &.active::after {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      @width: 34px;
+      @height: 16px;
+      width: @width;
+      height: @height;
+      margin-left: -@width/2;
+      margin-top: -@height/2;
+      border: 5px solid #ffffff;
+      border-top: none;
+      border-right: none;
+      transform: rotate(-45deg);
+      content: "";
+    }
+  }
 }
