remove unused styles

--- a/src/style/general.less
+++ b/src/style/general.less
@@ -6,7 +6,12 @@ a {
   text-decoration: none;
 }
 
+
 .page-header {
+  margin: 0;
+  margin-bottom: 2*@line-height-computed;
+  padding-bottom: 0;
+  border-bottom: none;
   background: #ffffff;
 }
 
